--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p class="words">كنت عايز اقولك ان انا بحبك و هفضل احبك بس  بطريقه <br>جديدة كده و بعيدا عن الخناقات بتاعت الفتره اللي فاتت بس برضو انا لسه بحبك و هفضل احبك ل اخر نفس<br> ف عمري</p>
+    <p class="words">كنت عايز اقولك ان انا بحبك و هفضل احبك بس  بطريقه جديدة كده و بعيدا عن الخناقات بتاعت الفتره اللي فاتت بس برضو انا لسه بحبك و هفضل احبك ل اخر نفس ف عمري</p>
     <br>
     <center>
         <a class="but" href="home2.html">NEXT ♥</a>
@@ -19,5 +19,6 @@
 
     <script src="main.js"></script>
 </body>
+
 
 </html>
